# serbia

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/2021-07-17-160225_create_users/: up.sql
migrations/2021-07-19-145757_create_sessions/: up.sql
mysql/: docker-compose.yml
src/: auth.rs  db.rs  errors.rs  forms.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs  users.rs
templates/: index.html  login.html  login_success.html  signup.html  signup_success.html
