[package]
name = "blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
chrono = "0.4"
clap = "2.33"
diesel  = { version = "1.4", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.15"
handlebars = "4.1"
r2d2 = "0.8"
serde = "1.0"
serde_json = "1.0"
