[package]
name = "blog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.4"
actix-web = "3.3"
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
diesel  = { version = "1.4", features = ["mysql", "r2d2", "chrono"] }
dotenv = "0.15"
failure = "0.1"
handlebars = "4.1"
r2d2 = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
